manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvs
spec:
  type: NodePort
  selector:
    app: carolynvanslyck.com
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
